# tpp-pytorch-extension

./: setup.py
SME-GEMM-dev/: .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile
SME-GEMM-dev/include/: IR.h  block2Tile.h  cost.h  costModel.h  cost_config.h  descriptor.h  enumerate.h  frontend.h  instructions.h  interface.h  macro.h  vectorLinkedList.h
SME-GEMM-dev/microbench/: CMakeLists.txt  generate_cost_config.py  kernel_cost_bench.py  overlap_bench.cpp
SME-GEMM-dev/motivation/: CMakeLists.txt  m1_overlap_bench.cpp  m2_dgemm8x8_mopa_bench.cpp  plot_m1_overlap.py  plot_m2_dgemm8x8.py  plot_m3_layout_frontend.py  run_m1_overlap.py  run_m2_dgemm8x8.py  run_m3_layout_frontend.py
SME-GEMM-dev/scripts/: build_thirdparty.sh  fetch_armpl.sh  gemm_bench_common.py  generate_gemm_perf_plot.py  install_armpl.sh  run_full_gemm_perf_suite.py  run_gemm_perf_compare.py  run_ir2a_gemm_bench.py  run_ir2c_gemm_bench.py  run_mode_matrix_perf_suite.py  run_smelt_gemm_bench.py  run_thirdparty_gemm_bench.py
SME-GEMM-dev/src/: CMakeLists.txt  IR.cpp  IR2A.cpp  IR2C.cpp  IR2LLVM.cpp  block2Tile.cpp  frontend.cpp  interface.cpp  smelt_context.S
SME-GEMM-dev/test/: CMakeLists.txt  IR2A_test.cpp  IR2C_test.cpp  README.md  fmopa_gemm.cpp  freq_test.cpp  frontend_test.cpp  interface_test.cpp  state.S  test_runner.py
SME-GEMM-dev/test/perf/: smelt_gemm_bench.cpp  thirdparty_gemm_bench.cpp
SME-GEMM-dev/test/verify/: Makefile  verify.cpp  wrapper.cpp
examples/alphafold/: attention_example_bf16.py  fused2_triangle_multiplication_example_bf16.py  triangle_multiplication_example_bf16.py
examples/bert/pretrain_mlperf/: lamb.py
examples/dlrm/: run_mlp.py  run_perceptron.py
examples/gnn/gat/: main.py
examples/gnn/graphsage/: main.py
examples/llm/: run_first_token.py  run_generation.py  test_shm_allreduce.py
libxsmm/ide/: _configure.bat  _vs.bat  _vs2022.bat  _vs2022.sln  libxsmm.vcxproj  libxsmm.vcxproj.filters  libxsmmext.vcxproj  libxsmmext.vcxproj.filters  libxsmmnoblas.vcxproj  libxsmmnoblas.vcxproj.filters
libxsmm/samples/cp2k/: cp2k-collocate.vcxproj  cp2k-dbcsr.vcxproj
libxsmm/samples/deeplearning/sparse_weight_mult/: parallel_sparse_weight_B_mult.vcxproj  sparse_weight_A_mult.vcxproj  sparse_weight_B_mult.vcxproj  sparse_weight_C_redmult.vcxproj
libxsmm/samples/deeplearning/vnni_pack/: vnni_pack.vcxproj
libxsmm/samples/edge/: asparse_packed_csr.vcxproj  bsparse_packed_csc.vcxproj  bsparse_packed_csr.vcxproj  dense_packedacrm.vcxproj  dense_packedbcrm.vcxproj
libxsmm/samples/eigen/: eigen_smm.vcxproj  eigen_tensor.vcxproj
libxsmm/samples/hello/: hello_c.vcxproj  hello_cpp.vcxproj
libxsmm/samples/magazine/: magazine_batch.vcxproj  magazine_blas.vcxproj  magazine_blaze.vcxproj  magazine_eigen.vcxproj  magazine_xsmm.vcxproj
libxsmm/samples/pyfr/: gimmik.vcxproj  pyfr_driver_asp_reg.vcxproj
libxsmm/samples/transpose/: transpose.vcxproj
libxsmm/samples/utilities/dispatch/: dispatch.vcxproj
libxsmm/samples/utilities/math/: math.vcxproj
libxsmm/samples/utilities/memcmp/: memcmp.vcxproj
libxsmm/samples/utilities/rng/: rng.vcxproj
libxsmm/samples/utilities/scratch/: scratch.vcxproj
libxsmm/samples/utilities/shuffle/: shuffle.vcxproj
libxsmm/samples/utilities/smmbench/: blas.vcxproj  dispatched.vcxproj  inlined.vcxproj  specialized.vcxproj
libxsmm/samples/utilities/sync/: sync_barrier.vcxproj  sync_lock.vcxproj
libxsmm/samples/utilities/wrap/: dgemm.vcxproj  dgemm_batch.vcxproj  dgemm_batch_strided.vcxproj  dgemv.vcxproj
libxsmm/samples/xgemm/: gemm_kernel.vcxproj  gemm_kernel_fused.vcxproj
libxsmm/tests/: atomics.vcxproj  convert.vcxproj  gemm.vcxproj  gemmbatch.vcxproj  gemmflags.vcxproj  hash.vcxproj  headeronly.vcxproj  malloc.vcxproj  matcopy.vcxproj  matdiff.vcxproj  math.vcxproj  memory.vcxproj  mhd.vcxproj  registry.vcxproj  rng.vcxproj  threadsafety.vcxproj  timer.vcxproj  trans.vcxproj  vla.vcxproj
src/csrc/: xsmm.cpp  xsmm_functors.h
src/csrc/alphafold/: fused2_triangle_multiplication_fwd_tmpl.h  fused_gating_attention_fwd_tmpl.h  fused_triangle_multiplication_fwd_tmpl.h
src/tpp_pytorch_extension/: __init__.py  optim.py
src/tpp_pytorch_extension/alphafold/: Alpha_Attention.py  Alpha_FusedTriangleMultiplication.py  Alpha_TriangleMultiplication.py
src/tpp_pytorch_extension/bert/: fused_bert.py  fused_bert_infer.py  fused_bert_unpad.py
src/tpp_pytorch_extension/dlrm/: mlp.py
src/tpp_pytorch_extension/gnn/common/: fused_ops.py
src/tpp_pytorch_extension/gnn/graphsage/: fused_graphsage.py
src/tpp_pytorch_extension/utils/: xsmm.py
